# ridehail

./: .gitignore  CLAUDE.md  KEYBOARD_SHORTCUTS.md  LICENSE  None  README.md  README.org  SIMULATION_FIX_PROPOSAL.md  analyze_profile.py  atoms.py  baseline.config  build.bat  build.ps1  build.sh  build_wheel.sh  clog.md  conda-spec-file-linux.txt  conda-spec-list-windows.txt  example.config  feb_6_48.config  index.html  main.js  mkdocs.yml  notes.md  plot.py  profile_map.py  profile_output.prof  profile_summary.py  publish.sh  pyproject.toml  refactor_proposal_config_loading.py  requirements.txt  ridehail.py  ridehail_animation.py  run.py  sequence.py  setup.cfg  simulation.py  temp.html  test.config  (+15 more)
.github/workflows/: deploy-pages.yml  python-publish.yml.disabled
cities/: manhattan.config  seattle-sequence.config  seattle-sim.config  seattle_h.config  seattle_pr.config  toronto.config  toronto_12.config  toronto_24.config  toronto_60.config  toronto_64.config
cities/innisfil/: innisfil.config
cities/toronto/: city_of_toronto.config  feb_6_2020.config  feb_6_2020_calibration_1.config  feb_6_2020_calibration_2.config  feb_6_2020_calibration_3.config  feb_6_2020_scale.config  feb_6_2020_whatif_wait_time.config  one_day.config  scarborough-seq.config  toronto_32.config  toronto_60.config  toronto_64.config  toronto_trips.csv
claude/: KEYBOARD_SHORTCUTS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  WEB_ANIMATION_SETUP.md  WEB_DEFAULTS_IMPLEMENTATION_PROPOSAL.md  adaptive-convergence-implementation-summary.md  adaptive-convergence-management.md  browser-keyboard-extension-proposal.md  browser-keyboard-extensions-implemented.md  browser-simulation-update-investigation.md  build-ps1-update-needed.md  config-results-section-implementation-plan.md  config_panel_integration_plan.md  default-change-notice.md  implementation-summary.md  keyboard-fixes.md  keyboard-unification-summary.md  phase-2-gain-scheduling-summary.md  pickup_time_requirements.md  web-animation-integration.md  web-animations-pypi-package-plan.md  web-cli-optimization.md  web-interface-adaptive-update.md
config/: animate_map.config  basic.config  city.config  city_advanced.config  eq_sequence.config  eqsd.config  equilibrate2.config  innisfil.config  intro.config  lesson_1.config  lesson_2.config  lesson_3.config  manhattan.config  manhattan_eq.config  manhattan_sequence.config  map.config  map_stats.config  price.config  rushhour.config  seattle_h.config  seattle_pr.config  simple.config  statics_1.config  statics_2.config  test-sequence.config  toronto.config  town.config  town_seq.config  user.config  village.config
doc/: background.md  background.org  benchmark.md  benchmark.org  cities.md  notes.md  notes.org  toronto.md  walkthrough-1.md
docs/: WEB_ANIMATION_SETUP.md  background.md  benchmark.org  browser-keyboard-extension-proposal.md  browser-keyboard-extensions-implemented.md  browser-keyboard-update-mechanism-fix.md  cities.md  config-results-section-implementation-plan.md  config_panel_integration_plan.md  configuration-mapping-analysis.md  index.md  installation.md  keyboard-fixes.md  keyboard-help-modal-implementation.md  keyboard-input-analysis.md  keyboard-unification-summary.md  main.js  notes.md  notes.org  performance-profiling-2025-10.md  pickup_time_requirements.md  quickstart.md  simulation-external-api-analysis.md  toronto.md  version-numbering-spec.md  walkthrough-1.md  web-animation-integration.md  webworker.js  worker.py
docs/animations/: browser.md  desktop.md  overview.md  terminal.md
docs/configuration/: examples.md  overview.md  parameters.md
docs/lab/: .gitignore  CLAUDE.md  UI_DESIGN_DECISIONS.md  app.js  experiment-tab.js  index.html  main.js  style.css  webworker.js  (+2 more)
img/: ridehail_images.pptx
local/: town.config  town2.config  town3.config  town4.config
modules/: map.js  stats.js
notebooks/: Wait Times.ipynb
plot/: rhploteq.py  rhplotequil.py  rhplotsequence.py
ridehail/: __init__.py  __main__.py  animation.py  animation_legacy.py  animation_original.py  atom.py  config.py  convergence.py  dispatch.py  export_keyboard_mappings.py  keyboard_mappings.py  measures.py  plot.py  presets.py  results.py  sequence.py  simulation.py  simulation_results.py  simulation_runner.py
rlang/: .RData  .Rhistory  demand.csv  prep_wait_times.R  sequence.Rmd  sequence.html  simulation.Rmd  toronto_rides.Rmd  toronto_rides.nb.html  toronto_trips.Rmd  toronto_trips.nb.html  uber-profit-loss.xlsx
test/: README.md  animation_stats.config  city.config  city_scale.config  city_size_16_simple.config  conftest.py  eq_seq.config  equilibrium.config  sequence.config  test.py  test_config_results_section.py  test_conversion.py  test_demand_units.py  test_dispatch_performance.py  test_fixed_port.py  test_fixed_port_integration.py  test_introspection_refactor.py  test_mean_trip_distance_validation.py  test_pickup_time_effect.py  test_presets.py  test_regression.py  test_sequence.config  test_sequence.py  test_simulation.py  test_standardized_results.py  test_text_keyboard.py  test_town_configs.py  test_version.py  test_web_animation.py  test_web_animation_quick.py  ui_town.config
tests/: test.py
utils/: analyze_dispatch_calls.py  analyze_feb6_config.py  benchmark_dispatch.py  benchmark_equilibration.py  check_density.py  check_vehicle_changes.py  confirm_diagnosis.py  performance_profiler.py  profile_equilibration.py  quick_test.py  test_block_scaling.py  test_config_loading.py  test_config_validation.py  test_dispatch_mode.py
walkthrough/: five_vehicles.config  five_vehicles_graph.config  interactive.config  one_vehicle.config  seattle-sequence.config  spatial_scale.config  step1_map.config  step2.config  step2_map_stats.config  step3_stats.config  step4_sequence.config  take_a_trip.config  temporal_scale.config  twenty_squares.config  twenty_squares_sequence.config
web/: .eslintrc.json  index.html  main.js  style.css  webworker.js  worker.py
(+118 files in other folders)
