[project]
name = "ridehail"
version = "2025-10-10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Minimal core - only what simulation.py, config.py, dispatch.py, atom.py need
    "numpy>=2.1.1",
]

[project.scripts]
ridehail = "ridehail.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ridehail*"]

[project.optional-dependencies]
# Desktop terminal UI
terminal = [
    "textual>=0.79.1",
    "textual-plotext>=0.2.1",
    "plotext>=5.3.2",
    "rich>=13.8.1",
]

# Desktop matplotlib visualizations
desktop = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "pandas>=2.3.3",
]

# Development tools
dev = [
    "textual-dev>=1.6.1",
    "ruff>=0.13.2",
    "pytest>=8.4.2",
    "psutil>=7.1.0",
]

# PyApp packaging
packaging = [
    "pyapp>=4.16.1",
]

# Full installation (all features for local development)
full = [
    "ridehail[terminal,desktop,dev,packaging]",
]

