[metadata]
name = ridehail
version = 0.0.1
author = Tom Slee
author_email = tom@tomslee.net
description = Ridehailing simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomslee/ridehail-animation
project_urls =
    Bug Tracker = https://github.com/tomslee/ridehail-animation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
